2004-10-18  Sam Steingold  <sds@gnu.org>

	* clos-genfun3.lisp (defgeneric): when the function is being
	TRACEd, UNTRACE it to avoid an error

2004-10-18  Sam Steingold  <sds@gnu.org>

	* clos-print.lisp (compute-effective-method): avoid a compiler warning

2004-10-18  Sam Steingold  <sds@gnu.org>

	* fill-out.lisp (right-margin, fill-stream-text-indent): new functions
	(fill-stream, fill-stream-flush-buffer): use them
	(fill-stream-line-position): renamed from LINE-POS

2004-10-16  Bruno Haible  <bruno@clisp.org>

	* clos-class3.lisp (defclass): Remove a level of quoting for the slot
	initforms.

2004-10-14  Bruno Haible  <bruno@clisp.org>

	* describe.lisp (describe-object@t): Handle the weak-list,
	weak-and-relation, weak-or-relation, weak-mapping, weak-and-mapping,
	weak-or-mapping, weak-alist types.

2004-10-14  Bruno Haible  <bruno@clisp.org>

	* clos-class3.lisp (shared-initialize-<structure-class>): Don't make
	side-effects on empty-ht and on all other structure-class instances.

2004-10-10  Bruno Haible  <bruno@clisp.org>

	* clos-genfun2.lisp (*dynamically-modifiable-generic-function-names*):
	Add many MOP generic function names.
	(need-gf-already-called-warning-p): Test membership with equal, not eq.

2004-10-10  Bruno Haible  <bruno@clisp.org>

	* clos-method1.lisp (standard-method): Remove initfunction slot.
	(initialize-instance-<standard-method>): Update.
	* clos-genfun4.lisp (initialize-extended-method-check): Update.
	* disassem.lisp (disassemble@standard-method): Update.

	Now that methods are never copied, move the initfunction invocation
	to the initializer.
	* clos-method1.lisp (initialize-instance-<standard-method>): Invoke
	the initfunction here.
	* clos-genfun2.lisp (std-add-method): ... not here.
	(std-remove-method): Use normal identity for comparing methods.

2004-10-15  Sam Steingold  <sds@gnu.org>

	LOAD can now restart when it encounters errors
	* init.lisp (eval-loaded-form-low): new function
	(eval-loaded-form): dummy definition